schedule evvery 4 hours

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,8 @@
 name: Build Guix Installer
 
 on:
+  schedule:
+    - cron: '10 */4 * * *'
   workflow_dispatch:
     inputs:
       disable_substitutes:
